# base_webframe

./: .gitignore  AUTHORS  ChangeLog  README.md  base_webframe_end.sh  base_webframe_start.sh  install_env.py  requirements.txt  setup.cfg  setup.py  setup_bk.py  supervisord.conf  wsgi.py
deploy/: __init__.py  config.py
deploy/bo/: __init__.py  bo_base.py  employee.py  enums.py  sysuser.py  user.py
deploy/cli/: __init__.py  foo.py
deploy/models/: base.py  employee.py  enums.py  sysuser.py  user.py
deploy/services/: employee.py  eumns.py  setter.py  sysuser.py  user.py
deploy/sql/: __init__.py  print_insert_sql.py  sql.py  table_create_sql.sql
deploy/static/css/: global.css  login-1.css  login.css
deploy/static/js/: global.js  msgbox.js
deploy/static/uploads/: __init__.py
deploy/statics/css/: global.css
deploy/statics/plugins/datatables/: jquery.dataTables.min.css
deploy/templates/: base.html  index.html  login-1.html  login.html  template.html
deploy/templates/employee/: add.html  edit.html  list.html
deploy/templates/errors/: 404.html  500.html
deploy/templates/set/: user.html
deploy/templates/setter/: user.html
deploy/utils/: __init__.py  base_class.py  logger.py  status.py  utils.py
deploy/views/: __init__.py  apis.py  employee.py  home.py  manage.py  set.py  setter.py  tasks.py
etc/dev/: config.yaml  gunicorn.conf  gunicorn_dev.conf  supervisor_base_webframe.conf
etc/prod/: config.yaml  gunicorn.conf  gunicorn_prod.conf  supervisor_base_webf.conf
