[metadata]
name = deploy
version = 0.0.1
author = pygo
author-email = gaoming971366@163.com
summary = OpenStack's setup automation in a reusable form
home-page = http://pygo2.cn
license = Apache-2
python_requires= >=2.7,
classifier =
    Development Status :: 1 - Developing,
    Intended Audience :: Developers,
    Environment :: Web Environment,
    Framework :: Flask,
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 2.7,
    
keywords =
    python2
    sdk
    webframe

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    deploy

[entry_points]
console_scripts =
    foo = deploy.cli:foo_entry_point

